--- a/src/app/cardgame/cardgame.component.scss
+++ b/src/app/cardgame/cardgame.component.scss
@@ -1,9 +1,10 @@
 
-.ion-page, #background-content, #container, ion-content {
+/*.ion-page, #background-content, #container, ion-content {
 background-color: #54494b !important;
 --ion-background-color: #54494b;
 
-}
+}*/
+
 .card {
     transform-style: preserve-3d;
     transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
