--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding">
 
   <div class="spacer"></div>
-  <div id="container">
+  <div>
     <ion-grid>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
@@ -90,13 +90,11 @@
 
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-
-          <div class="spacer"></div>
           <ion-card class="score-card">
             <ion-card-content>
               <div class="score">
                 <div class="score-bar">
-                  <div class="score-bar-completed" [style.width.%]="scoreBarCompleted">&nbsp;</div>
+                  <div class="score-bar-completed" [ngStyle]="scoreBarStatus">&nbsp;</div>
                 </div>
                 <p>&nbsp;</p>
                 <strong>You have answered {{score}} of {{totalNumberOfCards}} correctly!</strong>
