mental survey description on gender identification stage

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
             <h4>Welcome to the Mental Shower Survey</h4>
 
             <h2>Please scan a QR code with your phone camera to get started.</h2>
-
+            <h4>Once you have completed the survey, the indoor climate will be changed to best suit your needs!</h4>
 
 
             <div class="zone-selection">
@@ -34,9 +34,11 @@
           </div>
 
           <div *ngIf="!user.zone==0">
-
-
+            
             <div class="gender-selection" *ngIf="stage==1">
+              <h2>The Mental Shower Survey</h2>
+            <h4>Once you have completed the survey, the indoor climate will be changed to best suit your needs!</h4>
+
               <ion-card>
                 <ion-card-header>
                   <ion-card-subtitle>Please choose your</ion-card-subtitle>
